--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,13 @@
 # Skills
-# Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
 
-# Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+# Leadership
+- skill: Leadership & team management
+  description: Served as the chairperson of a student team for 2.5 years, during which I helped coordinate various administrative subteams and organize community events on technology topics.
 
-# Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+# Communication
+- skill: Communication & collaboration
+  description: Worked on a plethora of group projects as a student, many of which lead to scientific publications and/or open-source contributions.
+
+# Problem solving
+- skill: Problem solving
+  description: As a Computer Science graduate, I've tackled many analytical problems regarding data structures and algorithms, while delivering computationally efficient solutions.
