--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,15 +1,8 @@
 # Associations
-# comment out the urls if you do not wish to display them
 
-- organization: PETA
-  role: Volunteer
-  year: 2001 &mdash; 2010
-  url: https://www.peta.org/
-  summary: Organized fund drives and participated in fundraising events for the benefit of PETA's local Springfield operations.
-
-
-- organization: Yale Amnesty International
-  role: Communications coordinator
-  year: 2002 &mdash; 2004
-  url: http://campuspress.yale.edu/amnesty/
-  summary: During my junion and senior years at Yale, I was actively involved in Yale Amnesty International where I helped facilitate our student organization communications through website maintenance, writing for our campus publication, and graphic design of related materials.
+# ACM AUTh
+- organization: ACM AUTh Student Chapter
+  role: Chairperson
+  year: 2019 &mdash; 2021
+  url: https://auth.acm.org/en
+  summary: Coordinated an administrative team of over 25 members and helped in the organization of 15 community events about Computer Science and Career Development.
