--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,15 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+# UvA
+- degree: MSc Artificial Intelligence
+  uni: University of Amsterdam
+  year: "2021 &mdash; Current (expected: June, 2023)"
+  award: "Thesis: Robust Dense Neural Search"
+  summary: "<p>Notable Classes: Deep Learning 1 & 2, Information Retrieval 1 & 2, Deep Learning for NLP</br>Worked as a Teaching Assistant during my second year for <a target='blank' href='https://coursecatalogue.uva.nl/xmlpages/page/2022-2023-en/search-course/course/99130'>DL 1</a>, <a target='blank' href='https://coursecatalogue.uva.nl/xmlpages/page/2022-2023-en/search-course/course/99121'>FACT in AI</a>, <a target='blank' href='https://coursecatalogue.uva.nl/xmlpages/page/2022-2023-en/search-course/course/98818'>IR 1</a>, and <a target='blank' href='https://coursecatalogue.uva.nl/xmlpages/page/2022-2023-en/search-course/course/99159'>ATCS</a>.</p>"
+
+# AUTh
+- degree: BSc Computer Science
+  uni: Aristotle University of Thessaloniki
+  year: 2017 &mdash; 2021
+  award: Highest Grade of Class of '21
+  summary: "<p>Thesis: Machine Learning for Web Robot Detection (Scalper Bots)</br>Minors: (1) Artificial Intelligence, (2) Data & Web Management</p>"
