--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,13 @@
 # Projects
-# uncomment the urls if you wish to display them, and add your own URL
 
-# jazznotes.io
-- project: jazznotes.io
-  role: Founder & Primary Developer
-  duration: 2012 &mdash; Present
-  # url: "#"
-  description: Jazz Notes is an open source node/ember app that helps you keep track of your music compositions and new ideas.
+# bert-infoshare
+- project: Probing LLMs for Joint Encoding of Linguistic Properties
+  url: "https://github.com/thesofakillers/bert-infoshare"
+  description: Studied the information-sharing mechanisms in BERT-based models, demonstrating the presence of joint encoding across languages, linguistic entities, and tasks.
 
-# Springfield Community Outreach Group
-- project: Springfield Community Outreach Group
-  role: Co-Founder & Organizer
-  duration: 2007 &mdash; Present
-  # url: "#"
-  description: SCOG is a local monthly meetup in Springfield where we share opportunities to volunteer in the community and organize support for families and neighborhoods in need of assistance that the community can provide.
+# # deeBot
+# - project: deeBot
+#   role: Kotlin Development, SQL Database, Linux Server
+#   duration: 2016 &mdash; 2022
+#   url: "https://github.com/din0s/deeBot"
+#   description: Multi-purpose Discord bot for moderation, user & server management, and more.
