--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "K. Papakostas - Resume"
+title: "My Resume"
 description: "A resume template for Jekyll and GitHub Pages sites."
 
 # Build settings
