--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,7 +2,7 @@
 
 # ambig-lfqa
 - publication: Model Analysis & Evaluation for Ambiguous QA
-  venue: Under review as a short paper for <a target='blank' href='https://2023.aclweb.org/'>ACL 2023</a>.
+  venue: To be published in the <a target='blank' href='https://2023.aclweb.org/'>Findings of ACL 2023</a>.
   # url: ""
   description: Investigated the modeling aspects that influence the answer quality of retrieval-augmented models in long-from ambiguous QA, along with the alignment of common evaluation metrics with human judgment.
 
