--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,8 +2,8 @@
 
 # ambig-lfqa
 - publication: Model Analysis & Evaluation for Ambiguous QA
-  venue: To be published in the <a target='blank' href='https://2023.aclweb.org/'>Findings of ACL 2023</a>.
-  # url: ""
+  venue: Published in the <a target='blank' href='https://2023.aclweb.org/'>Findings of ACL 2023</a>.
+  url: "https://arxiv.org/abs/2305.12483"
   description: Investigated the modeling aspects that influence the answer quality of retrieval-augmented models in long-from ambiguous QA, along with the alignment of common evaluation metrics with human judgment.
 
 # Vision DiffMask
