--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,8 +3,8 @@
 # Zeta Alpha
 - company: Zeta Alpha
   position: Research Intern
-  duration: Nov, 2022 &mdash; Present
-  summary: Working on my thesis on domain adaptation and model adaptation for Neural Search.
+  duration: Nov, 2022 &mdash; July, 2023
+  summary: "Worked on my thesis titled [Domain Adaptation for Dense Retrieval: Generating Diverse Synthetic Data with Large Language Models](https://scripties.uba.uva.nl/search?id=record_53682), under the supervision of Dr. Andrew Yates and Jakub Zavrel."
 
 # # IT AUTh
 # - company: IT Center AUTh
