--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,8 +3,8 @@
 # UvA
 - degree: MSc Artificial Intelligence
   uni: University of Amsterdam
-  year: "2021 &mdash; Current (expected: June, 2023)"
-  award: "Thesis: Robust Dense Neural Search"
+  year: 2021 &mdash; 2023
+  award: "Distinction: Cum Laude"
   summary: "<p>Notable Classes: Deep Learning 1 & 2, Information Retrieval 1 & 2, Deep Learning for NLP</br>Worked as a Teaching Assistant during my second year for <a target='blank' href='https://coursecatalogue.uva.nl/xmlpages/page/2022-2023-en/search-course/course/99130'>DL 1</a>, <a target='blank' href='https://coursecatalogue.uva.nl/xmlpages/page/2022-2023-en/search-course/course/99121'>FACT in AI</a>, <a target='blank' href='https://coursecatalogue.uva.nl/xmlpages/page/2022-2023-en/search-course/course/98818'>IR 1</a>, and <a target='blank' href='https://coursecatalogue.uva.nl/xmlpages/page/2022-2023-en/search-course/course/99159'>ATCS</a>.</p>"
 
 # AUTh
