--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,7 +4,7 @@
 - company: Zeta Alpha
   position: Research Intern
   duration: Nov, 2022 &mdash; July, 2023
-  summary: "Worked on my thesis titled [Domain Adaptation for Dense Retrieval: Generating Diverse Synthetic Data with Large Language Models](https://scripties.uba.uva.nl/search?id=record_53682), under the supervision of Dr. Andrew Yates and Jakub Zavrel."
+  summary: 'Worked on my thesis titled <a href="https://scripties.uba.uva.nl/search?id=record_53682" rel="external">Domain Adaptation for Dense Retrieval: Generating Diverse Synthetic Data with Large Language Models</a>, under the supervision of Dr. Andrew Yates and Jakub Zavrel.'
 
 # # IT AUTh
 # - company: IT Center AUTh
