--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_email:           "dinos.ppk+website@gmail.com"
 resume_header_contact_info:     "Amsterdam, Netherlands • dinos.ppk [at] gmail [dot] com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>I'm a highly motivated second-year MSc student in Artificial Intelligence. Currently, I work at <a target='blank' href='https://zeta-alpha.com'>Zeta Alpha</a> as a Research Intern on Robust Dense Retrieval. My interests lie in Explainable AI, Neural Information Retrieval, and NLP.</p>"
+resume_header_intro: "<p>I'm a highly motivated AI professional, and a proud alumnus with an MSc degree in Artificial Intelligence from the University of Amsterdam. Currently, I work at <a target='blank' href='https://zeta-alpha.com'>Zeta Alpha</a> as a Research Engineer, specializing on dense embedding models and generative language models. My interests lie in Explainable AI, Neural Information Retrieval, and NLP.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -35,7 +35,7 @@ resume_header_intro: "<p>I'm a highly motivated second-year MSc student in Artif
 # comment out to hide
 resume_section_experience:      true
 resume_section_education:       true
-resume_section_projects:        true
+resume_section_projects:        false
 resume_section_publications:    true
 resume_section_skills:          true
 resume_section_recognition:     true
